force-app/main/default/objects/Candidate__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Name</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>