force-app/main/default/objects/Candidate__c/fields/Job_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Job_Requisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job_Requisition</label>
    <referenceTo>Job_Requisition__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>