force-app/main/default/objects/Candidate__c/fields/Parse_Status__c.field-meta.xml
<CustomField>
    <fullName>Parse_Status__c</fullName>
    <label>Parse Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>