force-app/main/default/objects/Candidate__c/fields/Parsed_JSON__c.field-meta.xml
<CustomField>
    <fullName>Parsed_JSON__c</fullName>
    <description>This stores the raw API response for audit/debugging</description>
    <label>Parsed JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>