force-app/main/default/objects/Candidate__c/fields/Parsed_Skills__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Skills__c</fullName>
    <label>Parsed Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>