force-app/main/default/objects/Candidate__c/fields/Year_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Experience__c</fullName>
    <label>Year of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>