force-app/main/default/objects/Candidate__c/validationRules/Prevent_Stage_Change_After_Rejection.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Stage_Change_After_Rejection</fullName>
    <active>true</active>
    <description>This rule will stop the stage from being after the candidate is rejected</description>
    <errorConditionFormula>AND( ISPICKVAL(PRIORVALUE(Outcome__c), &quot;Rejected&quot;), ISCHANGED(Stage__c) )</errorConditionFormula>
    <errorMessage>The Candidate is already &quot;Rejected&quot;</errorMessage>
</ValidationRule>